--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!doctype html>
-<html lang="">
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title></title>
         <meta name="description" content="">
+
+        <style>
+            header
+            {
+                background-color: hotpink;
+            }
+            h1 
+            {
+                color: #bada55;
+            }
+        </style>
     </head>
     <body>
         <header>
-            <h1>Hello world! This is my HTML5 boilerplate.</h1>
+            <h1>Hello World! This is my HTML5 boilerplate.</h1>
             <p>A Boilerplate helps you build fast, robust, and adaptable web apps or sites. Kick-start your project with the combined knowledge and effort of 100s of developers, all in one little package.</p>
         </header>
         <h2>
@@ -36,7 +47,7 @@
         </p>
         <hr>
         <footer>
-            <p>By <strong>Your name</strong></p>
+            <p>By <strong>Dylan Bomon</strong></p>
         </footer>
     </body>
 </html>
