Added Title and description.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
+        <title>HTML5 Boilerplate Dylan Bomon</title>
+        <meta name="description" content="Dit is een html5 boilerplate.">
 
         <style>
             header
