Added viewport meta tag.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>HTML5 Boilerplate Dylan Bomon</title>
         <meta name="description" content="Dit is een html5 boilerplate.">
-
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
         <style>
             header
             {
