--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
         <title>HTML5 Boilerplate Dylan Bomon</title>
         <meta name="description" content="Dit is een html5 boilerplate.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
+        <meta name="theme-color" content="#44c8f5">
+
+        <link rel="icon" href="favicon.svg">
+        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <link rel="manifest" href="manifest.json">
+
+
         <style>
             header
             {
