--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
             <h1>Hello World! This is my HTML5 boilerplate.</h1>
             <p>A Boilerplate helps you build fast, robust, and adaptable web apps or sites. Kick-start your project with the combined knowledge and effort of 100s of developers, all in one little package.</p>
         </header>
-        <h2>
+        <nav>
+            <ul>
+                <li><a href="#heading2">Heading 2</a></li>
+                <li><a href="#heading3">Heading 3</a></li>
+                <li><a href="#table">Table</a></li>
+                <li><a href="#lists">Lists</a></li>
+            </ul>
+        </nav>
+        <h2 id="heading2">
             Heading 2
         </h2>
         <p>
@@ -40,7 +48,7 @@
             <image src="img/yawning-cat.jpeg" alt="This is a picture of a yawning cat"></image>
             <figcaption>Yawning cat. Photo by Martina Misar</figcaption>
         </figure>
-        <h3>
+        <h3 id="heading3">
             Heading 3
         </h3>
         <p>
@@ -51,7 +59,7 @@
                 A blockquote is a large quotation. The content of a blockquote element must include block-level elements such as headings, lists, paragraphs or div’s. This element can also have an optional attribute cite that specifies the location (in the form of a URI) where the quote has come from.
             </p>
         </blockquote>
-        <h2>table</h2>
+        <h2 id="table">table</h2>
         <table>
             <tr>
                 <th>Country</th>
@@ -59,7 +67,7 @@
                 <th>Population</th>
                 <th>Language</th>
             </tr>
-            <tr>
+            <tr class="odd">
                 <td>USA</td>
                 <td>Washington,D.C.</td>
                 <td>309 million</td>
@@ -71,7 +79,7 @@
                 <td>9 million</td>
                 <td>Swedish</td>
             </tr>
-            <tr>
+            <tr class="odd">
                 <td>France</td>
                 <td>Paris</td>
                 <td>10 million</td>
@@ -84,9 +92,14 @@
                 <td>German</td>
             </tr>
         </table>
-        <h3>
+        <h3 id="lists">
             Styling lists is easy
         </h3>
+        <ul>
+            <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia, numquam!</li>
+            <li>Impedit, corrupti! Eos quam doloremque modi, nihil accusantium ut et!</li>
+            <li>Sit itaque ea reiciendis reprehenderit non, explicabo culpa eveniet quisquam.</li>
+        </ul>
         <p>
             Add an unorderd list with 3 list items here
         </p>
